[gd_scene load_steps=10 format=3 uid="uid://dugaivbj1o66n"]

[ext_resource type="Script" uid="uid://d0dgljwwl463n" path="res://scripts/level.gd" id="1_e1sh7"]
[ext_resource type="PackedScene" uid="uid://cffjduipbb3s5" path="res://scenes/level/player.tscn" id="1_uvcbi"]
[ext_resource type="PackedScene" uid="uid://bclq8vh1x2goy" path="res://scenes/ui/inventory_ui.tscn" id="4_x8g2h"]
[ext_resource type="PackedScene" uid="uid://ccencq0lcd3ph" path="res://scenes/ui/multiplayer_chat_ui.tscn" id="5_x9g3h"]
[ext_resource type="PackedScene" uid="uid://bx7mq8t8hjn7q" path="res://scenes/ui/main_menu_ui.tscn" id="6_x9g3h"]

[sub_resource type="PlaneMesh" id="PlaneMesh_r5xs5"]
size = Vector2(90, 90)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o02aj"]
albedo_color = Color(0, 0.321569, 0.172549, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_x3h1o"]
size = Vector3(90, 0.05, 90)

[sub_resource type="Environment" id="Environment_qb4jd"]
fog_enabled = true

[node name="Level" type="Node3D"]
script = ExtResource("1_e1sh7")
player_scene = ExtResource("1_uvcbi")

[node name="Environment" type="Node3D" parent="."]

[node name="Floor" type="StaticBody3D" parent="Environment"]
collision_layer = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Floor"]
mesh = SubResource("PlaneMesh_r5xs5")
surface_material_override/0 = SubResource("StandardMaterial3D_o02aj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Floor"]
shape = SubResource("BoxShape3D_x3h1o")

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_qb4jd")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(1, 0, 0, 0, -0.5, 0.866025, 0, -0.866025, -0.5, 0, 4, 0)
shadow_enabled = true
shadow_blur = 0.5

[node name="PlayersContainer" type="Node3D" parent="."]

[node name="MainMenuUI" parent="." instance=ExtResource("6_x9g3h")]
visible = false

[node name="MultiplayerChatUI" parent="." instance=ExtResource("5_x9g3h")]
visible = false

[node name="InventoryUI" parent="." instance=ExtResource("4_x8g2h")]
visible = false
